--- a/viewer.html
+++ b/viewer.html
@@ -87,6 +87,9 @@
 <div class="example-dependencies" style="width:960px" title="File Dependencies"></div>
 <hr>
 <div class="example-components" style="width:960px"  title="Component List"></div>
+<hr>
+<div id="disqus_thread"></div>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 <script data-cfasync="false" type="text/javascript">
 var example,
@@ -153,6 +156,23 @@ function parseUri(){
 
 		generateContent(example);
     });
+	
+    /** DISQUS COMMENTS
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+     */
+	var disqus_config = function () {
+        this.page.url = window.location.href.replace("https","http");  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = example.description; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    (function() {  // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        
+        s.src = '//hydrashare.disqus.com/embed.js';
+        
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
 };
 
 parseUri();
